# DS_Wet_1

./: .gitignore  AvlTree  AvlTree.cpp  AvlTree.h  CMakeLists.txt  Course.cpp  Course.h  Student.cpp  Student.h  TechSystem26a1.cpp  TechSystem26a1.h
.github/workflows/: stage.yml
dry/: dry.lyx
